feat: add tokens

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,8 @@ name = "marmoset"
 version = "0.1.0"
 authors = ["koka <koka.code@gmail.com>"]
 
+[lib]
+name = "marmoset_lib"
+path = "lib/mod.rs"
+
 [dependencies]
