--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ after_success: |
   cd ../.. &&
   rm -rf kcov-master &&
   for file in target/debug/examplerust-*[^\.d]; do mkdir -p "target/cov/$(basename $file)"; ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
-  bash <(curl -s https://codecov.io/bash) &&
+  bash <(curl -s https://codecov.io/bash)
